<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="MainLblApplicationName">Shopping 0.07</string><string name="MenuTtvChooseMenu">Hello Shopping - Choose Option</string>
    
    <string name="MenuBtnNew">New</string>
    <string name="MenuBtnBasket">Basket</string>
    <string name="MenuBtnAbout">About</string>
    <string name="MenuBtnExit">Exit</string>
    <string name="AboutTtvAbout">Hello. Application Shopping. Power by JJMobileApp 2011</string>
    <string name="AboutBtnExit">Exit</string>
    <string name="NowyTtvZakup">Podaj produkt:</string>
    <string name="NowyTtvCena">Podaj cenę:</string>
    <string name="NowyEdtCena"></string>
    <string name="NowyBtnDodaj">Dodaj</string>
    <string name="NowyBtnExit">Exit</string>
    <string name="NowyEdtProdukt"></string>
    <string name="NowyTtvIloscProduktow">Ilosc produktów:</string>
    <string name="NowyTtvRazem">Razem:</string>
    <string name="NoItems">Brak produktów na liście</string>
    
</resources>
